fix sbt project